rnsc/test_data/integration/error/parser/type_hints/int/overflow_recovers.rns
.class @int 99999999999
unexpected_token ; <- this error should be reported as well
